# viro_simple_fleet

./: CMakeLists.txt  README.md  package.xml
config/: fleet_mngr.yaml
launch/: fleet_client.launch.py
maps/: devshop.yaml
scripts/: fleet_client_main.py  fleet_client_monitor.py  fleet_client_navigator.py  fleet_mngr_main.py
vda5050/vda5050_connector/: CMakeLists.txt
vda5050/vda5050_connector/config/: connector_example.yaml
vda5050/vda5050_connector/vda5050_connector_py/: mqtt_bridge.py  vda5050_controller.py
vda5050/vda5050_msgs/msg/: Connection.msg
viro_simple_fleet/: CMakeLists.txt  README.md  db_manager.py  db_register.py  fleet_client_custom_plugin.py  package.xml  robot_navigator.py
viro_simple_fleet/config/: connector_tb3.yaml  fleet_mngr.yaml
viro_simple_fleet/launch/: connector_tb3.launch.py  fleet_client.launch.py
viro_simple_fleet/scripts/: fleet_client_main.py  fleet_client_monitor.py  fleet_client_navigator.py  fleet_mngr_main.py
viro_simple_fleet/viro_simple_fleet/: db_manager.py  db_register.py  fleet_client_custom_plugin.py
